<resources>
    <string name="app_name">LoveFinderrz</string>
    <string name="action_browse">Browse</string>
    <string name="action_home">Home</string>

    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="log_in">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_description">Login: </string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello to LoveFinderrz</string>
    <string name="hello_second_fragment">Hello second fragment.</string>
    <string name="error_title">Error of title</string>
    <string name="error_message">General error</string>
    <string name="general_positive_button">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_description">Email: </string>
    <string name="password" >Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="profile_edit_button_desc">Edit button</string>
    <string name="profile">Profile</string>
    <string name="profile_browser">Probile Browser</string>
    <string name="username_error">Wrong username</string>
    <string name="register_error">Error while registering</string>
    <string name="log_in_error">Error while logging in</string>
    <string name="repeat_password_error">Passwords don\'t match</string>
    <string name="show_password_error">Password error</string>
    <string name="show_email_error">Email error</string>
    <string name="show_login_error">Login error</string>
    <string name="show_email_and_password_error">Error</string>
    <string name="log_out">Log out</string>
    <string name="profile_label_change_photo">Add photo</string>
    <string name="profile_label_change_login">Edit login</string>
    <string name="register_success">Successfully registered. Now sign in.</string>
    <string name="log_out_success">Successfully signed out.</string>
    <string name="action_show_matches">Show matches</string>
    <string name="matched_profiles">Your matched profiles</string>
</resources>