<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <!--        app:layout_constraintBottom_toTopOf="@+id/profile_browser_image"-->

        <!--        app:layout_constraintBottom_toTopOf="@+id/profile_browser_image"-->

        <!--        app:layout_constraintBottom_toTopOf="@+id/profile_browser_image"-->
        <TextView
            android:id="@+id/profile_login_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_description"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_login_text"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/profile_email_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_login_description"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/profile_email_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/email_description"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/profile_email_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/profile_email_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/email"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="382dp"
        android:layout_height="430dp"
        tools:src="@drawable/avatar"

        app:layout_constraintBottom_toTopOf="@+id/profile_edit_buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/profile_image_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_edit_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_button_change_photo"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_button_change_login"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_button_change_photo"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />

        <TextView
            android:id="@+id/profile_label_change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/profile_label_change_photo"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_button_change_photo" />

        <TextView
            android:id="@+id/profile_label_change_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/profile_label_change_login"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/profile_label_change_photo"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_button_change_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>